# strava-upload

./: .gitignore  README.md  pyproject.toml
src/strava_upload/: auth.py  main.py  utils.py
